Fix some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,13 @@
   margin-top: 6rem;
   text-align: center;
 }
+
+footer {
+  margin-top: 10rem;
+  font-size: 75%;
+  text-align: center;
+}
+
+td {
+  padding-right: 5px;
+}
